--- a/04_datainfra.Rmd
+++ b/04_datainfra.Rmd
@@ -27,6 +27,7 @@ information (including phylogenetic tree) and reference sequences.
 The `mia` package implements tools using these classes for analysis of
 microbiome sequencing data.
 
+
 ## Installation
 
 Install the development version from GitHub using `remotes` R package.  
@@ -36,6 +37,7 @@ Install the development version from GitHub using `remotes` R package.
 #install.packages("remotes")
 BiocManager::install("microbiome/mia")
 ```
+
 
 ### Packages    
 
@@ -431,7 +433,7 @@ Let us store `GlobalPatterns` into `se` and check its original number of feature
 
 ```{r}
 # store data into se and check dimensions
-data("GlobalPatterns")
+data("GlobalPatterns", package="mia")
 se <- GlobalPatterns
 # show dimensions
 dim(se) ## [1] n°features    n°samples
