--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -60,13 +60,13 @@ techniques, we can visualize the abundances at Phylum level.
 
 ```{r heatmap}
 library(ggplot2)
-# Does clr-transformation
+# Add clr-transformation on samples
 tse_phylum <- transformSamples(tse_phylum, method = "clr", pseudocount = 1)
-# Does z-transformation
+# Add z-transformation on features (taxa)
 tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr", 
                                 method = "z", name = "clr_z")
 # Melts the assay
-df <- meltAssay(tse_phylum, abund_values = "clr_z")
+df <- meltAssay(tse_phylum, assay_name = "clr_z")
 
 # Determines the scaling of colours
 maxval <- round(max(abs(df$clr_z)))
