--- a/90_example_data.Rmd
+++ b/90_example_data.Rmd
@@ -7,21 +7,78 @@ library(rebook)
 chapterPreamble()
 ```
 
+
+Open demonstration data for testing and benchmarking purposes is
+available from multiple locations. This chapter introduces some
+options. The other chapters of this book provide ample examples about
+the use of the data.
+
+
 ## Package data {#package-data}
 
-The datasets in `mia` are conversions of the `phyloseq` datasets 
-`GlobalPatterns` `enterotype`, `esophagus` and `soilrep`.
+The `mia` R package contains example data sets that are direct
+conversions from the alternative `phyloseq` container to the
+`TreeSummarizedExperiment` container.
 
-### GlobalPatterns
+List the available data sets in the `mia` package:
+
 
 ```{r, message=FALSE}
 library(mia)
-# Example how to load data
-data("GlobalPatterns", package="mia")
+print(data(package="mia"))
+```
 
+Check the documentation for one of these data sets:
+
+```{r, message=FALSE, echo=FALSE}
+help(GlobalPatterns)
+```
+
+Load the `GlobalPatterns` data from the `mia` package:
+
+```{r, message=FALSE}
+data("GlobalPatterns", package="mia")
 GlobalPatterns
 ```
 
+
+## ExperimentHub data
+
+The [ExperimentHub](https://bioconductor.org/packages/release/bioc/vignettes/ExperimentHub/inst/doc/ExperimentHub.html) provides a variety of data resources, including the [microbiomeDataSets](https://bioconductor.org/packages/devel/data/experiment/html/microbiomeDataSets.html) package.
+
+A table of the available data sets is available through the `availableDataSets`
+function.
+
+```{r, message=FALSE}
+library(microbiomeDataSets)
+availableDataSets()
+```
+
+All data are downloaded from ExperimentHub and cached for local
+re-use. Check the [man pages of each
+function](https://microbiome.github.io/microbiomeDataSets/reference/index.html)
+for a detailed documentation of the data contents and references. The
+following example data set is a `r Biocpkg("MultiAssayExperiment")`:
+
+```{r, message=FALSE, eval=FALSE}
+#mae <- HintikkaXOData()
+```
+
+Example data sets are available in `r Biocpkg("SummarizedExperiment")`, `r Biocpkg("TreeSummarizedExperiment")`, and `r Biocpkg("MultiAssayExperiment")` data containers; see the separate page on [alternative containers](https://microbiome.github.io/OMA/multitable.html) for more details.
+
+
+
+## Other data sources
+
+The [curatedMetagenomicData](https://waldronlab.io/curatedMetagenomicData) is an independent source that provides various example data sets as `(Tree)SummarizedExperiment` objects. This resource provides curated human microbiome data including gene families, marker abundance, marker presence, pathway abundance, pathway coverage, and relative abundance for samples from different body sites. See the package homepage for more details on data availability and access.
+
+As one example, let us retrieve the AsnicarF data set:
+
+
+```{r, message=FALSE}
+library(curatedMetagenomicData)
+tse <- curatedMetagenomicData("AsnicarF_20.+.relative_abundance", dryrun = FALSE, counts = TRUE)
+```
 
 ## Session Info {-}
 
