--- a/04_datainfra.Rmd
+++ b/04_datainfra.Rmd
@@ -150,7 +150,7 @@ tree_file_path <- "data/Data_humanization_phylo_aggregation.tre"
 Now we can load the biom data into a SummarizedExperiment (SE) object.
 
 ```{r}
-library(mia)
+library("mia")
 
 # Imports the data
 se <- loadFromBiom(biom_file_path)
