--- a/04_datainfra.Rmd
+++ b/04_datainfra.Rmd
@@ -51,10 +51,7 @@ BiocManager::install("microbiome/mia")
 
 ## Background
 
-The widely used `phyloseq` package and class were around before the [`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)  
-and the derived 
-[`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html) 
-class. Many methods for taxonomic profiling data are readily available for the  `phyloseq` class structure. 
+The widely used `phyloseq` package and class were around before the [`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html) and the derived [`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html) class. Many methods for taxonomic profiling data are readily available for the  `phyloseq` class structure. 
 
 In order to facilitate the transition, we provide here a short description how `phyloseq` and `*Experiment` classes relate to 
 each other.
@@ -89,8 +86,8 @@ f1000research.26669.2). F1000Research 9:1246.
 research](https://doi.org/10.7490/
 f1000research.1118447.1) F1000Research 9:1464 (slides).
 
-## Loading experimental microbiome data
 
+## Loading experimental microbiome data
 
 ### Importing data from external files
 
@@ -125,7 +122,7 @@ Specific import functions are provided for:
 
 #### Example for importing Biom files
 
-This example shows how Biom files are imported into a TreeSummarizedExperiment object. 
+This example shows how Biom files are imported into a `TreeSummarizedExperiment` object. 
 
 The data is from following publication: 
 Tengeler AC _et al._ (2020) [**Gut microbiota from persons with
