--- a/90_example_data.Rmd
+++ b/90_example_data.Rmd
@@ -20,12 +20,12 @@ The `mia` R package contains example data sets that are direct
 conversions from the alternative `phyloseq` container to the
 `TreeSummarizedExperiment` container.
 
-List the available data sets in the `mia` package:
+List the [available datasets](https://microbiome.github.io/mia/reference/index.html) in the `mia` package:
 
 
-```{r, message=FALSE}
+```{r, message=FALSE, eval=FALSE}
 library(mia)
-print(data(package="mia"))
+data(package="mia")
 ```
 
 Check the documentation for one of these data sets:
