reorganizing data set descriptions

--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -8,6 +8,8 @@ chapterPreamble()
 ```
 
 
+
+
 ## Community
 
 This resource is a result of a community-driven development process
@@ -96,26 +98,28 @@ following packages. Some of these are independently developed and
 maintained.
 
 
-Data container:
+### Data container:
 
 - [TreeSummarizedExperiment](http://bioconductor.org/packages/devel/bioc/html/TreeSummarizedExperiment.html)
 
 
-R packages (miaverse):
+### Packages
 
-- [mia](microbiome.github.io/mia)
-- [miaViz](microbiome.github.io/miaViz)
+(Some) R packages utilizing the TreeSE container:
+
+- [mia](microbiome.github.io/mia) : Microbiome analysis tools   
+- [miaViz](microbiome.github.io/miaViz) : Microbiome analysis specific visualization
+- [miaSim](microbiome.github.io/miaSim) : Microbiome data simulations
+- [miaTime](microbiome.github.io/miaTime) : Microbiome time series analysis
 - [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (external)
 
+### Demonstration data
 
-Demonstration data:
-
-- [mia](microbiome.github.io/mia) - classical microbiome data sets; see `rdata(package="mia")`
-- [microbiomeDataSets](microbiome.github.io/microbiomeDataSets) - microbiome data from ExperimentHub 
-- [curatedMetagenomicData](https://waldronlab.io/curatedMetagenomicData/) (external)
+Various open demonstration data sets are available, see a separate
+Chapter on [#example-data].
 
 
-Online tutorials and training material:
+### Online tutorials 
 
 - [OMA](microbiome.github.io/OMA)
 
