--- a/book.bib
+++ b/book.bib
@@ -1,4 +1,26 @@
 
+@Article{Vatanen2016,
+  author =	 {Tommi Vatanen and Aleksandar D. Kostic and Eva
+                  d’Hennezel and Heli Siljander and Eric A. Franzosa
+                  and Moran Yassour and Raivo Kolde and Hera Vlamakis
+                  and Timothy D. Arthur and Anu-Maaria Hämäläinen and
+                  Aleksandr Peet and Vallo Tillmann and Raivo Uibo and
+                  Sergei Mokurov and Natalya Dorshakova and Jorma
+                  Ilonen and Suvi M. Virtanen and Susanne J. Szabo and
+                  Jeffrey A. Porter and Harri Lähdesmäki and Curtis
+                  Huttenhower and Dirk Gevers and Thomas W. Cullen and
+                  Mikael Knip and and Ramnik J. Xavier},
+  title =	 {Variation in Microbiome LPS Immunogenicity
+                  Contributes to Autoimmunity in Humans},
+  journal =	 {Cell},
+  year =	 2016,
+  volume =	 165,
+  pages =	 {842--853},
+  month =	 {May},
+  doi =		 {10.1016/j.cell.2016.04.007},
+  status =	 {bioscience}
+}
+
 
 @Book{OMA,
   author =	 {Leo Lahti and Sudarshan Shetty and Felix M Ernst and others},
