--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -8,8 +8,6 @@ chapterPreamble()
 ```
 
 
-
-
 ## Community
 
 This resource is a result of a community-driven development process
@@ -91,40 +89,14 @@ the basis for microbiome analysis, including the
 by Lucas Schiffer, Levi Waldron and others [@Pasolli2017].
 
 
-## Package ecosystem
 
-The miaverse (TreeSE) framework is supported (at least) by the
-following packages. Some of these are independently developed and
-maintained.
+### Further reading
 
+* [Data Analysis and Visualization in R for Ecologists](https://datacarpentry.org/R-ecology-lesson/) by Data Carpentry
 
-### Data container:
+* [Modern Statistics for Modern Biology. Holmes & Huber (2018)](http://web.stanford.edu/class/bios221/book/) for background in statistical analysis
 
-- [TreeSummarizedExperiment](http://bioconductor.org/packages/devel/bioc/html/TreeSummarizedExperiment.html)
-
-
-### Packages
-
-(Some) R packages utilizing the TreeSE container:
-
-- [mia](microbiome.github.io/mia) : Microbiome analysis tools   
-- [miaViz](microbiome.github.io/miaViz) : Microbiome analysis specific visualization
-- [miaSim](microbiome.github.io/miaSim) : Microbiome data simulations
-- [miaTime](microbiome.github.io/miaTime) : Microbiome time series analysis
-- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (external)
-
-### Demonstration data
-
-Various open demonstration data sets are available, see a separate
-Chapter on [#example-data].
-
-
-### Online tutorials 
-
-- [OMA](microbiome.github.io/OMA)
-
-
-
+* [Microbiome Data Science. Shetty & Lahti, 2019](https://openresearchlabs.github.io/publications/papers/2018-Shetty-Lahti-MDS.pdf)
 
 
 
