--- a/book.bib
+++ b/book.bib
@@ -41,8 +41,7 @@
   pages =	 115,
   month =	 {October},
   doi =		 {10.1007/s12038-019-9930-2},
-  note =	 {Preprint openly available at:
-                  https://openresearchlabs.github.io/publications/papers/2019-Shetty-MDS.pdf},
+  note =	 {Preprint: https://github.com/openresearchlabs/openresearchlabs.github.io/blob/master/public/publication_resources/papers/2019-Shetty-MDS.pdf},
   status =	 {bioscience},
   keywords =	 {review}
 }
