--- a/index.Rmd
+++ b/index.Rmd
@@ -24,15 +24,16 @@ url: "`r .gh_url`"
 
 
 You are reading the online book, **Orchestrating Microbiome Analysis
-with Bioconductor** [@OMA], where we go through common strategies and
-workflows in microbiome data science. The book shows through concrete
-examples how you can use some of the latest advances in the
-R/Bioconductor ecosystem for microbiome data manipulation, analysis,
-and reproducible reporting. The book was borne out of necessity, while
-updating microbiome analysis tools to work with Bioconductor classes
-that provide support for multi-modal data collections. At the same
-time, the techniques are more generic and often applicable in other
-contexts as well.
+with Bioconductor** [@OMA], where we walk through common strategies and
+workflows in microbiome data science.
+
+The book shows through concrete examples how you can use some of the
+latest advances in the R/Bioconductor framework for microbiome data
+manipulation, analysis, and reproducible reporting. The book was borne
+out of necessity, while updating microbiome analysis tools to work
+with Bioconductor classes that provide support for multi-modal data
+collections. These techniques are generic and widely applicable in
+other contexts, too.
 
 This work is heavily influenced by similar resources, such as the
 Orchestrating Single-Cell Analysis with Bioconductor [@Amezquita2020natmeth],
@@ -52,25 +53,22 @@ data to work with in the context of this framework.
 This book is organized into three parts. We start by introducing the
 material and link to further resources for learning R and
 Bioconductor. We will describe the microbiome data containers, the
-TreeSummarizedExperiment class.
-
-The second section, *Focus Topics*, is all about the steps for analyzing
-microbiome data, beginning with the most common steps and progressing to
-more specialized methods in subsequent sections.
-
-The third part, *Workflows*, provides case studies for the
-various datasets used throughout the book.
-
-The final section, *Appendix*, provides links to further resources.
+TreeSummarizedExperiment class. The second section, *Focus Topics*, is
+all about the steps for analyzing microbiome data, beginning with the
+most common steps and progressing to more specialized methods in
+subsequent sections. Third, *Workflows*, provides case studies for the
+various datasets used throughout the book. Finally, *Appendix*, links
+to further resources.
 
 
 --------------
 
 The book is written in RMarkdown with the bookdown R package. OMA is a
-collaborative effort. Several individuals who have contributed
-methods, workflows and improvements are acknowledged in the Appendix.
-This online resource is **free to use** with the
-[Creative Commons Attribution-NonCommercial 3.0](https://creativecommons.org/licenses/by-nc/3.0/us/) License.
+collaborative effort, where several individuals have contributed
+methods, workflows and improvements as acknowledged in the Appendix.
+This online resource is **free to use** with the [Creative Commons
+Attribution-NonCommercial
+3.0](https://creativecommons.org/licenses/by-nc/3.0/us/) License.
 
 
 ```{r include=FALSE}
