Add draft section on speed comparison
In the draft section within Extra data on execution times is loaded and then several plots are generated to compare performance of tse and pseq routine methods.

--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -83,3 +83,79 @@ plot_ly(reduced_data, x=~PC1,y=~PC2,z=~PC3)%>%
 
 ```
 
+## Speed comparisons between `tse`and `pseq`containers
+
+### Methods under inspection
+
+Load:
+
+* ggplot2
+* dplyr
+* readxl
+
+```{r include = FALSE}
+# load libraries and data
+library(ggplot2)
+library(dplyr)
+library(readxl)
+```
+
+```{r load data}
+execution_times <- read_excel("execution_times.xlsx")
+```
+
+```{r prepare data}
+execution_times <- execution_times %>% filter(!is.na(samples)) %>% mutate(samples_by_features = samples * features) 
+```
+
+### Execution time as a function of sample number
+
+```{r compare melting}
+ggplot(execution_times, aes(x = samples, y = melt, color = melt_command)) + 
+  geom_point() +
+  labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "melt command") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r compare transform}
+ggplot(execution_times, aes(x = samples, y = transform, color = transform_command)) + 
+  geom_point() +
+  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r compare agglomerate}
+ggplot(execution_times, aes(x = samples, y = agglomerate, color = agglomerate_command)) + 
+  geom_point() +
+  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+### Execution time as a function of samples * features
+
+```{r compare melting}
+ggplot(execution_times, aes(x = samples_by_features, y = melt, color = melt_command)) + 
+  geom_point() +
+  labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "melt command") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r compare transform}
+ggplot(execution_times, aes(x = samples_by_features, y = transform, color = transform_command)) + 
+  geom_point() +
+  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r compare agglomerate}
+ggplot(execution_times, aes(x = samples_by_features, y = agglomerate, color = agglomerate_command)) + 
+  geom_point() +
+  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+  
