Correct relative path to "execution_times"

--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -101,7 +101,7 @@ library(readxl)
 ```
 
 ```{r load data}
-execution_times <- read_excel("execution_times.xlsx")
+execution_times <- read_excel("data/execution_times.xlsx")
 ```
 
 ```{r prepare data}
