Correct plot labels

--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -139,7 +139,7 @@ ggplot(execution_times, aes(x = samples, y = agglomerate, color = agglomerate_co
 ```{r compare melting}
 ggplot(execution_times, aes(x = samples_by_features, y = melt, color = melt_command)) + 
   geom_point() +
-  labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "melt command") +
+  labs(title = "Melting comparison", x = "Samples * Features", y = "Execution time in s", color = "melt command") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -147,7 +147,7 @@ ggplot(execution_times, aes(x = samples_by_features, y = melt, color = melt_comm
 ```{r compare transform}
 ggplot(execution_times, aes(x = samples_by_features, y = transform, color = transform_command)) + 
   geom_point() +
-  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command") +
+  labs(title = "Transformation comparison", x = "Samples * Features", y = "Execution time in s", color = "transform command") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -155,7 +155,7 @@ ggplot(execution_times, aes(x = samples_by_features, y = transform, color = tran
 ```{r compare agglomerate}
 ggplot(execution_times, aes(x = samples_by_features, y = agglomerate, color = agglomerate_command)) + 
   geom_point() +
-  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method") +
+  labs(title = "Agglomeration comparison", x = "Samples * Features", y = "Execution time in s", color = "agglomerate method") +
   theme_classic() +
   theme(legend.position = "bottom")
   
