Replace chunk names with simple comments

--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -87,30 +87,26 @@ plot_ly(reduced_data, x=~PC1,y=~PC2,z=~PC3)%>%
 
 ### Methods under inspection
 
-Load:
-
-* ggplot2
-* dplyr
-* readxl
-
-```{r include = FALSE}
-# load libraries and data
+```{r, message=FALSE, warning=FALSE}
+# load libraries
 library(ggplot2)
 library(dplyr)
-library(readxl)
 ```
 
-```{r load data}
-execution_times <- read_excel("data/execution_times.xlsx")
+```{r}
+# load data
+execution_times <- read.csv("data/execution_times.csv")
 ```
 
-```{r prepare data}
-execution_times <- execution_times %>% filter(!is.na(samples)) %>% mutate(samples_by_features = samples * features) 
+```{r}
+# filter data
+execution_times <- execution_times %>% filter(!is.na(samples)) 
 ```
 
 ### Execution time as a function of sample number
 
-```{r compare melting}
+```{r}
+# compare melting
 ggplot(execution_times, aes(x = samples, y = melt, color = melt_command)) + 
   geom_point() +
   labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "melt command") +
@@ -118,7 +114,8 @@ ggplot(execution_times, aes(x = samples, y = melt, color = melt_command)) +
   theme(legend.position = "bottom")
 ```
 
-```{r compare transform}
+```{r}
+# compare transform
 ggplot(execution_times, aes(x = samples, y = transform, color = transform_command)) + 
   geom_point() +
   labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command") +
@@ -126,7 +123,8 @@ ggplot(execution_times, aes(x = samples, y = transform, color = transform_comman
   theme(legend.position = "bottom")
 ```
 
-```{r compare agglomerate}
+```{r}
+# compare agglomerate
 ggplot(execution_times, aes(x = samples, y = agglomerate, color = agglomerate_command)) + 
   geom_point() +
   labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method") +
@@ -136,7 +134,8 @@ ggplot(execution_times, aes(x = samples, y = agglomerate, color = agglomerate_co
 
 ### Execution time as a function of samples * features
 
-```{r compare melting}
+```{r}
+# compare melting
 ggplot(execution_times, aes(x = samples_by_features, y = melt, color = melt_command)) + 
   geom_point() +
   labs(title = "Melting comparison", x = "Samples * Features", y = "Execution time in s", color = "melt command") +
@@ -144,7 +143,8 @@ ggplot(execution_times, aes(x = samples_by_features, y = melt, color = melt_comm
   theme(legend.position = "bottom")
 ```
 
-```{r compare transform}
+```{r}
+# compare transform
 ggplot(execution_times, aes(x = samples_by_features, y = transform, color = transform_command)) + 
   geom_point() +
   labs(title = "Transformation comparison", x = "Samples * Features", y = "Execution time in s", color = "transform command") +
@@ -152,7 +152,8 @@ ggplot(execution_times, aes(x = samples_by_features, y = transform, color = tran
   theme(legend.position = "bottom")
 ```
 
-```{r compare agglomerate}
+```{r}
+# compare agglomerate
 ggplot(execution_times, aes(x = samples_by_features, y = agglomerate, color = agglomerate_command)) + 
   geom_point() +
   labs(title = "Agglomeration comparison", x = "Samples * Features", y = "Execution time in s", color = "agglomerate method") +
