--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -103,13 +103,13 @@ execution_times <- read.csv("data/execution_times.csv")
 execution_times <- execution_times %>% filter(!is.na(samples)) 
 ```
 
-### Execution time as a function of sample number
+### Execution time as a function of number of samples
 
 ```{r}
 # compare melting
 ggplot(execution_times, aes(x = samples, y = melt, color = melt_command)) + 
   geom_point() +
-  labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "melt command") +
+  labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "melt command", caption = "Execution time of melting as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -118,7 +118,7 @@ ggplot(execution_times, aes(x = samples, y = melt, color = melt_command)) +
 # compare transform
 ggplot(execution_times, aes(x = samples, y = transform, color = transform_command)) + 
   geom_point() +
-  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command") +
+  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -127,36 +127,36 @@ ggplot(execution_times, aes(x = samples, y = transform, color = transform_comman
 # compare agglomerate
 ggplot(execution_times, aes(x = samples, y = agglomerate, color = agglomerate_command)) + 
   geom_point() +
-  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method") +
+  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method", caption = "Execution time of agglomeration as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
-### Execution time as a function of samples * features
+### Execution time as a function of number of features
 
 ```{r}
 # compare melting
-ggplot(execution_times, aes(x = samples_by_features, y = melt, color = melt_command)) + 
+ggplot(execution_times, aes(x = features, y = melt, color = melt_command)) + 
   geom_point() +
-  labs(title = "Melting comparison", x = "Samples * Features", y = "Execution time in s", color = "melt command") +
+  labs(title = "Melting comparison", x = "Number of features", y = "Execution time in s", color = "melt command", caption = "Execution time of melting as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
 ```{r}
 # compare transform
-ggplot(execution_times, aes(x = samples_by_features, y = transform, color = transform_command)) + 
+ggplot(execution_times, aes(x = features, y = transform, color = transform_command)) + 
   geom_point() +
-  labs(title = "Transformation comparison", x = "Samples * Features", y = "Execution time in s", color = "transform command") +
+  labs(title = "Transformation comparison", x = "Number of features", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
 ```{r}
 # compare agglomerate
-ggplot(execution_times, aes(x = samples_by_features, y = agglomerate, color = agglomerate_command)) + 
+ggplot(execution_times, aes(x = features, y = agglomerate, color = agglomerate_command)) + 
   geom_point() +
-  labs(title = "Agglomeration comparison", x = "Samples * Features", y = "Execution time in s", color = "agglomerate method") +
+  labs(title = "Agglomeration comparison", x = "Number of features", y = "Execution time in s", color = "agglomerate method", caption = "Execution time of agglomeration as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
-  
+```
