--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -100,14 +100,15 @@ execution_times <- read.csv("data/execution_times.csv")
 
 ```{r}
 # filter data
-execution_times <- execution_times %>% filter(!is.na(samples)) 
+execution_times <- execution_times %>% filter(!is.na(Samples)) 
+execution_times
 ```
 
 ### Execution time as a function of number of samples
 
 ```{r}
 # compare melting
-ggplot(execution_times, aes(x = samples, y = melt, color = melt_command)) + 
+ggplot(execution_times, aes(x = Samples, y = Melt, color = MeltCommand)) + 
   geom_point() +
   labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "melt command", caption = "Execution time of melting as a function of number of samples") +
   theme_classic() +
@@ -116,7 +117,7 @@ ggplot(execution_times, aes(x = samples, y = melt, color = melt_command)) +
 
 ```{r}
 # compare transform
-ggplot(execution_times, aes(x = samples, y = transform, color = transform_command)) + 
+ggplot(execution_times, aes(x = Samples, y = Transform, color = TransformCommand)) + 
   geom_point() +
   labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of samples") +
   theme_classic() +
@@ -125,9 +126,25 @@ ggplot(execution_times, aes(x = samples, y = transform, color = transform_comman
 
 ```{r}
 # compare agglomerate
-ggplot(execution_times, aes(x = samples, y = agglomerate, color = agglomerate_command)) + 
+ggplot(execution_times, aes(x = Samples, y = Agglomerate, color = AgglomerateCommand)) + 
   geom_point() +
   labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method", caption = "Execution time of agglomeration as a function of number of samples") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+ggplot(execution_times, aes(x = Samples, y = AlphaEstimation, color = AlphaCommand)) + 
+  geom_point() +
+  labs(title = "Alpha Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating alpha diversity as a function of number of samples") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+ggplot(execution_times, aes(x = Samples, y = BetaEstimation, color = BetaCommand)) + 
+  geom_point() +
+  labs(title = "Beta Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating beta diversity as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -136,7 +153,7 @@ ggplot(execution_times, aes(x = samples, y = agglomerate, color = agglomerate_co
 
 ```{r}
 # compare melting
-ggplot(execution_times, aes(x = features, y = melt, color = melt_command)) + 
+ggplot(execution_times, aes(x = Features, y = Melt, color = MeltCommand)) + 
   geom_point() +
   labs(title = "Melting comparison", x = "Number of features", y = "Execution time in s", color = "melt command", caption = "Execution time of melting as a function of number of features") +
   theme_classic() +
@@ -145,7 +162,7 @@ ggplot(execution_times, aes(x = features, y = melt, color = melt_command)) +
 
 ```{r}
 # compare transform
-ggplot(execution_times, aes(x = features, y = transform, color = transform_command)) + 
+ggplot(execution_times, aes(x = Features, y = Transform, color = TransformCommand)) + 
   geom_point() +
   labs(title = "Transformation comparison", x = "Number of features", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of features") +
   theme_classic() +
@@ -154,9 +171,25 @@ ggplot(execution_times, aes(x = features, y = transform, color = transform_comma
 
 ```{r}
 # compare agglomerate
-ggplot(execution_times, aes(x = features, y = agglomerate, color = agglomerate_command)) + 
+ggplot(execution_times, aes(x = Features, y = Agglomerate, color = AgglomerateCommand)) + 
   geom_point() +
   labs(title = "Agglomeration comparison", x = "Number of features", y = "Execution time in s", color = "agglomerate method", caption = "Execution time of agglomeration as a function of number of features") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+ggplot(execution_times, aes(x = Features, y = AlphaEstimation, color = AlphaCommand)) + 
+  geom_point() +
+  labs(title = "Alpha Diversity Estimation comparison", x = "Number of features", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating alpha diversity as a function of number of features") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+ggplot(execution_times, aes(x = Features, y = BetaEstimation, color = BetaCommand)) + 
+  geom_point() +
+  labs(title = "Beta Diversity Estimation comparison", x = "Number of features", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating beta diversity as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
