Improve plot location

--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -104,7 +104,7 @@ execution_times <- execution_times %>% filter(!is.na(Samples))
 execution_times
 ```
 
-### Execution time as a function of number of samples
+### Execution time of melting
 
 ```{r}
 # compare melting
@@ -116,42 +116,6 @@ ggplot(execution_times, aes(x = Samples, y = Melt, color = MeltCommand)) +
 ```
 
 ```{r}
-# compare transform
-ggplot(execution_times, aes(x = Samples, y = Transform, color = TransformCommand)) + 
-  geom_point() +
-  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of samples") +
-  theme_classic() +
-  theme(legend.position = "bottom")
-```
-
-```{r}
-# compare agglomerate
-ggplot(execution_times, aes(x = Samples, y = Agglomerate, color = AgglomerateCommand)) + 
-  geom_point() +
-  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method", caption = "Execution time of agglomeration as a function of number of samples") +
-  theme_classic() +
-  theme(legend.position = "bottom")
-```
-
-```{r}
-ggplot(execution_times, aes(x = Samples, y = AlphaEstimation, color = AlphaCommand)) + 
-  geom_point() +
-  labs(title = "Alpha Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating alpha diversity as a function of number of samples") +
-  theme_classic() +
-  theme(legend.position = "bottom")
-```
-
-```{r}
-ggplot(execution_times, aes(x = Samples, y = BetaEstimation, color = BetaCommand)) + 
-  geom_point() +
-  labs(title = "Beta Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating beta diversity as a function of number of samples") +
-  theme_classic() +
-  theme(legend.position = "bottom")
-```
-
-### Execution time as a function of number of features
-
-```{r}
 # compare melting
 ggplot(execution_times, aes(x = Features, y = Melt, color = MeltCommand)) + 
   geom_point() +
@@ -160,8 +124,19 @@ ggplot(execution_times, aes(x = Features, y = Melt, color = MeltCommand)) +
   theme(legend.position = "bottom")
 ```
 
+### Execution time of transformation
+
 ```{r}
-# compare transform
+# compare transformation in terms of samples
+ggplot(execution_times, aes(x = Samples, y = Transform, color = TransformCommand)) + 
+  geom_point() +
+  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of samples") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+# compare transformation in terms of features
 ggplot(execution_times, aes(x = Features, y = Transform, color = TransformCommand)) + 
   geom_point() +
   labs(title = "Transformation comparison", x = "Number of features", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of features") +
@@ -169,16 +144,39 @@ ggplot(execution_times, aes(x = Features, y = Transform, color = TransformComman
   theme(legend.position = "bottom")
 ```
 
+### Execution time of agglomeration
+
 ```{r}
-# compare agglomerate
-ggplot(execution_times, aes(x = Features, y = Agglomerate, color = AgglomerateCommand)) + 
+# compare agglomeration in terms of samples
+ggplot(execution_times, aes(x = Samples, y = Agglomerate, color = AgglomerateCommand)) + 
   geom_point() +
-  labs(title = "Agglomeration comparison", x = "Number of features", y = "Execution time in s", color = "agglomerate method", caption = "Execution time of agglomeration as a function of number of features") +
+  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method", caption = "Execution time of agglomeration as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
 ```{r}
+# compare agglomeration in terms of features
+ggplot(execution_times, aes(x = Features, y = Agglomerate, color = AgglomerateCommand)) + 
+  geom_point() +
+  labs(title = "Agglomeration comparison", x = "Number of features", y = "Execution time in s", color = "agglomerate command", caption = "Execution time of agglomeration as a function of number of features") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+### Execution time of alpha diversity estimation
+
+```{r}
+# compare estimation of alpha diversity in terms of samples
+ggplot(execution_times, aes(x = Samples, y = AlphaEstimation, color = AlphaCommand)) + 
+  geom_point() +
+  labs(title = "Alpha Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating alpha diversity as a function of number of samples") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+# compare estimation of alpha diversity in terms of features
 ggplot(execution_times, aes(x = Features, y = AlphaEstimation, color = AlphaCommand)) + 
   geom_point() +
   labs(title = "Alpha Diversity Estimation comparison", x = "Number of features", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating alpha diversity as a function of number of features") +
@@ -186,7 +184,19 @@ ggplot(execution_times, aes(x = Features, y = AlphaEstimation, color = AlphaComm
   theme(legend.position = "bottom")
 ```
 
+### Execution time of beta diversity estimation
+
 ```{r}
+# compare estimation of beta diversity in terms of samples
+ggplot(execution_times, aes(x = Samples, y = BetaEstimation, color = BetaCommand)) + 
+  geom_point() +
+  labs(title = "Beta Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating beta diversity as a function of number of samples") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+# compare estimation of beta diversity in terms of features
 ggplot(execution_times, aes(x = Features, y = BetaEstimation, color = BetaCommand)) + 
   geom_point() +
   labs(title = "Beta Diversity Estimation comparison", x = "Number of features", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating beta diversity as a function of number of features") +
