Add text to speed comparisons

--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -87,6 +87,25 @@ plot_ly(reduced_data, x=~PC1,y=~PC2,z=~PC3)%>%
 
 ### Methods under inspection
 
+Tree summarized experiment objects (tse) and phyloseq (pseq) objects can be viewed as two distinct containers with the same content organized in two different ways. Consequently, these two classes of objects do not perform equally when subject to analogous computational tasks. While the time execution might not diverge significantly in the case of smaller data sets, it could be of matter for larger data sets.
+
+To estimate the time efficiency of homologous tasks but with different targets (`tse` or `pseq`), the following working routines are performed on data sets of various size and compared in terms of the targeted object class:
+
+* Melting
+* Transformation
+* Agglomeration
+* Alpha diversity estimation
+* Beta diversity estimation
+
+The analyzed data sets include:
+
+* AsnicarF_2017.relative_abundance
+* GlobalPatterns
+* VincentC_2016
+* SilvermanAGutData
+* SongQAData
+* SprockettTHData
+
 ```{r, message=FALSE, warning=FALSE}
 # load libraries
 library(ggplot2)
@@ -95,7 +114,7 @@ library(dplyr)
 
 ```{r}
 # load data
-execution_times <- read.csv("data/execution_times.csv")
+execution_times <- read.csv("execution_times.csv")
 ```
 
 ```{r}
@@ -108,18 +127,18 @@ execution_times
 
 ```{r}
 # compare melting
-ggplot(execution_times, aes(x = Samples, y = Melt, color = MeltCommand)) + 
+ggplot(execution_times, aes(x = Samples, y = Melt, color = MeltCommand, shape = as.factor(Features))) + 
   geom_point() +
-  labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "melt command", caption = "Execution time of melting as a function of number of samples") +
+  labs(title = "Melting comparison", x = "Number of samples", y = "Execution time in s", color = "method:", shape = "number of features:", caption = "Execution time of melting as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
 ```{r}
 # compare melting
-ggplot(execution_times, aes(x = Features, y = Melt, color = MeltCommand)) + 
+ggplot(execution_times, aes(x = Features, y = Melt, color = MeltCommand, shape = as.factor(Samples))) + 
   geom_point() +
-  labs(title = "Melting comparison", x = "Number of features", y = "Execution time in s", color = "melt command", caption = "Execution time of melting as a function of number of features") +
+  labs(title = "Melting comparison", x = "Number of features", y = "Execution time in s", color = "method:", shape = "number of samples:", caption = "Execution time of melting as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -128,18 +147,18 @@ ggplot(execution_times, aes(x = Features, y = Melt, color = MeltCommand)) +
 
 ```{r}
 # compare transformation in terms of samples
-ggplot(execution_times, aes(x = Samples, y = Transform, color = TransformCommand)) + 
+ggplot(execution_times, aes(x = Samples, y = Transform, color = TransformCommand, shape = as.factor(Features))) + 
   geom_point() +
-  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of samples") +
+  labs(title = "Transformation comparison", x = "Number of samples", y = "Execution time in s", color = "method:", shape = "number of features:", caption = "Execution time of transformation as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
 ```{r}
 # compare transformation in terms of features
-ggplot(execution_times, aes(x = Features, y = Transform, color = TransformCommand)) + 
+ggplot(execution_times, aes(x = Features, y = Transform, color = TransformCommand, shape = as.factor(Samples))) + 
   geom_point() +
-  labs(title = "Transformation comparison", x = "Number of features", y = "Execution time in s", color = "transform command", caption = "Execution time of transformation as a function of number of features") +
+  labs(title = "Transformation comparison", x = "Number of features", y = "Execution time in s", color = "method:", shape = "number of samples:", caption = "Execution time of transformation as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -148,18 +167,18 @@ ggplot(execution_times, aes(x = Features, y = Transform, color = TransformComman
 
 ```{r}
 # compare agglomeration in terms of samples
-ggplot(execution_times, aes(x = Samples, y = Agglomerate, color = AgglomerateCommand)) + 
+ggplot(execution_times, aes(x = Samples, y = Agglomerate, color = AgglomerateCommand, shape = as.factor(Features))) + 
   geom_point() +
-  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "agglomerate method", caption = "Execution time of agglomeration as a function of number of samples") +
+  labs(title = "Agglomeration comparison", x = "Number of samples", y = "Execution time in s", color = "method:", shape = "number of features:", caption = "Execution time of agglomeration as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
 ```{r}
 # compare agglomeration in terms of features
-ggplot(execution_times, aes(x = Features, y = Agglomerate, color = AgglomerateCommand)) + 
+ggplot(execution_times, aes(x = Features, y = Agglomerate, color = AgglomerateCommand, shape = as.factor(Samples))) + 
   geom_point() +
-  labs(title = "Agglomeration comparison", x = "Number of features", y = "Execution time in s", color = "agglomerate command", caption = "Execution time of agglomeration as a function of number of features") +
+  labs(title = "Agglomeration comparison", x = "Number of features", y = "Execution time in s", color = "method:", shape = "number of samples:", caption = "Execution time of agglomeration as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -168,18 +187,18 @@ ggplot(execution_times, aes(x = Features, y = Agglomerate, color = AgglomerateCo
 
 ```{r}
 # compare estimation of alpha diversity in terms of samples
-ggplot(execution_times, aes(x = Samples, y = AlphaEstimation, color = AlphaCommand)) + 
+ggplot(execution_times, aes(x = Samples, y = AlphaEstimation, color = AlphaCommand, shape = as.factor(Features))) + 
   geom_point() +
-  labs(title = "Alpha Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating alpha diversity as a function of number of samples") +
+  labs(title = "Alpha Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "method:", shape = "number of features:", caption = "Execution time of estimating alpha diversity as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
 ```{r}
 # compare estimation of alpha diversity in terms of features
-ggplot(execution_times, aes(x = Features, y = AlphaEstimation, color = AlphaCommand)) + 
+ggplot(execution_times, aes(x = Features, y = AlphaEstimation, color = AlphaCommand, shape = as.factor(Samples))) + 
   geom_point() +
-  labs(title = "Alpha Diversity Estimation comparison", x = "Number of features", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating alpha diversity as a function of number of features") +
+  labs(title = "Alpha Diversity Estimation comparison", x = "Number of features", y = "Execution time in s", color = "method:", shape = "number of samples:", caption = "Execution time of estimating alpha diversity as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
@@ -188,18 +207,23 @@ ggplot(execution_times, aes(x = Features, y = AlphaEstimation, color = AlphaComm
 
 ```{r}
 # compare estimation of beta diversity in terms of samples
-ggplot(execution_times, aes(x = Samples, y = BetaEstimation, color = BetaCommand)) + 
+ggplot(execution_times, aes(x = Samples, y = BetaEstimation, color = BetaCommand, shape = as.factor(Features))) + 
   geom_point() +
-  labs(title = "Beta Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating beta diversity as a function of number of samples") +
+  labs(title = "Beta Diversity Estimation comparison", x = "Number of samples", y = "Execution time in s", color = "method:", shape = "number of features:", caption = "Execution time of estimating beta diversity as a function of number of samples") +
   theme_classic() +
   theme(legend.position = "bottom")
 ```
 
 ```{r}
 # compare estimation of beta diversity in terms of features
-ggplot(execution_times, aes(x = Features, y = BetaEstimation, color = BetaCommand)) + 
+ggplot(execution_times, aes(x = Features, y = BetaEstimation, color = BetaCommand, shape = as.factor(Samples))) + 
   geom_point() +
-  labs(title = "Beta Diversity Estimation comparison", x = "Number of features", y = "Execution time in s", color = "diversity estimation command", caption = "Execution time of estimating beta diversity as a function of number of features") +
+  labs(title = "Beta Diversity Estimation comparison", x = "Number of features", y = "Execution time in s", color = "method:", shape = "number of samples:", caption = "Execution time of estimating beta diversity as a function of number of features") +
   theme_classic() +
   theme(legend.position = "bottom")
+```
+
+```{r}
+mean_time <- execution_times %>% group_by(ObjectType) %>% summarize(mean_melt = mean(Melt), mean_transform = mean(Transform), mean_agglomerate = mean(Agglomerate), mean_alpha = mean(AlphaEstimation), mean_beta = mean(BetaEstimation, na.rm = TRUE))
+mean_time
 ```
