--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -121,7 +121,10 @@ Chapter on [#example-data].
 
 ### Online tutorials 
 
-- [OMA](microbiome.github.io/OMA)
+- Getting started with R? Try [swirl](https://swirlstats.com/)
+
+- [Orchestrating Microbiome Analysis in R and Bioconductor](microbiome.github.io/OMA)
+
 
 
 
