--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -16,8 +16,8 @@ sets**, in a separate Chapter on [#example-data], and **online
 tutorials** including this online book as well as the various package
 vignettes and other material.
 
-```{r }
-knitr::include_graphics("https://github.com/microbiome/OMA/general/figures/FigureOverviewV2.png")
+```{r echo=FALSE}
+knitr::include_graphics("general/figures/FigureOverviewV2.png")
 ```
 
 
