--- a/index.Rmd
+++ b/index.Rmd
@@ -17,59 +17,55 @@ date: "`r rebook::openingDetails(Copyright='', Source=.gh_url)`"
 url: "`r .gh_url`"
 ---
 
+
 # Welcome {-}
 
 
 <a href="https://bioconductor.org"><img src="`r rebook::BiocSticker('animated')`" width="200" alt="Bioconductor Sticker" align="right" style="margin: 0 1em 0 1em" /></a>
 
 
-You are reading the online book, **Orchestrating Microbiome Analysis
-with Bioconductor** [@OMA], where we walk through common strategies and
-workflows in microbiome data science.
+You are reading the online book, [**Orchestrating Microbiome Analysis
+with R and Bioconductor**](microbiome.github.io/OMA) [@OMA], where we
+walk through common strategies and workflows in microbiome data
+science.
 
-The book shows through concrete examples how you can use some of the
-latest advances in the R/Bioconductor framework for microbiome data
-manipulation, analysis, and reproducible reporting. The book was borne
-out of necessity, while updating microbiome analysis tools to work
-with Bioconductor classes that provide support for multi-modal data
-collections. These techniques are generic and widely applicable in
-other contexts, too.
+The book shows through concrete examples how you can take advantage of
+the latest developments in R/Bioconductor for the manipulation,
+analysis, and reproducible reporting of hierarchical and heterogeneous
+microbiome profiling data sets. The book was borne out of necessity,
+while updating microbiome analysis tools to work with Bioconductor
+classes that provide support for multi-modal data collections. Many of
+these techniques are generic and widely applicable in other contexts
+as well.
 
-This work is heavily influenced by similar resources, such as the
-Orchestrating Single-Cell Analysis with Bioconductor [@Amezquita2020natmeth],
-[phyloseq tutorials](http://joey711.github.io/phyloseq/tutorials-index) [@Callahan2016] and
-[microbiome tutorials](https://microbiome.github.io/tutorials/) [@Shetty2019].
-This book extends the previous efforts of such related work, teaching the grammar
-of Bioconductor workflows and thus supporting the
-adoption of general data analysis skills in the analysis of large,
-hierarchical multi-modal data collections.
+This work has been heavily influenced by other similar resources, in
+particular the Orchestrating Single-Cell Analysis with Bioconductor
+[@Amezquita2020natmeth], [phyloseq
+tutorials](http://joey711.github.io/phyloseq/tutorials-index)
+[@Callahan2016] and [microbiome
+tutorials](https://microbiome.github.io/tutorials/) [@Shetty2019].
+This book extends these resources to teach the grammar of Bioconductor
+workflows in the context of microbiome data science.  As such, it
+supports the adoption of general skills in the analysis of large,
+hierarchical, and multi-modal data collections. We focus on microbiome
+analysis tools, including entirely new, partially updated as well as
+previously established methods.
 
-We focus on microbiome analysis tools, new, updated and established methods.
-In the *Introduction* section, we show how to work with the key data 
-infrastructure `TreeSummarizedExperiment` and related classes, how this 
-framework relates to other infrastructure and how to load microbiome analysis 
-data to work with in the context of this framework.
-
-This book is organized into three parts. We start by introducing the
-material and link to further resources for learning R and
-Bioconductor. We will describe the microbiome data containers, the
-TreeSummarizedExperiment class. The second section, *Focus Topics*, is
-all about the steps for analyzing microbiome data, beginning with the
-most common steps and progressing to more specialized methods in
-subsequent sections. Third, *Workflows*, provides case studies for the
-various datasets used throughout the book. Finally, *Appendix*, links
-to further resources.
-
-
---------------
-
-The book is written in RMarkdown with the bookdown R package. OMA is a
-collaborative effort, where several individuals have contributed
-methods, workflows and improvements as acknowledged in the Appendix.
-This online resource is **free to use** with the [Creative Commons
+This online resource and its associated ecosystem of microbiome data
+science tools are a result of a community-driven development process,
+and welcoming new contributors. Several individuals have
+[contributed](https://github.com/microbiome/OMA/graphs/contributors)
+methods, workflows and improvements as acknowledged in the
+Introduction. You can find more information on how to find us online
+and join the developer community through the project homepage at
+[microbiome.github.io](https://microbiome.github.io). This online
+resource has been written in RMarkdown with the bookdown R
+package. The material is **free to use** with the [Creative Commons
 Attribution-NonCommercial
 3.0](https://creativecommons.org/licenses/by-nc/3.0/us/) License.
 
+
+--------------
 
 ```{r include=FALSE}
 # global knitr options
